<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activities.Sensors2PdActivity">
    <item
        android:id="@+id/action_browse"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_browse"/>
    <!-- <item -->
    <!-- android:id="@+id/action_debug" -->
    <!-- android:orderInCategory="100" -->
    <!-- android:showAsAction="always" -->
    <!-- android:title="@string/action_debug"/> -->
    <item
        android:id="@+id/action_guide"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_guide"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="150"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:title="@string/action_about"/>
</menu>

