<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".activities.Sensors2PdActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/introHeadline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_intro_headline"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textViewIntro"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_intro"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="visible" />

            <TextView
                android:id="@+id/runningPdFileIntro"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_pd_file"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/runningPdFile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>